# learning-docker

01_containerize_next.js_app/: Dockerfile  Dockerfile.prod  README.md  package-lock.json  package.json
02_containerize_fast_api_app/demo-app/: Dockerfile.dev  README.md  pyproject.toml
